Ajustes backend y front

--- a/Backend/BTWLibrary/Properties/launchSettings.json
+++ b/Backend/BTWLibrary/Properties/launchSettings.json
@@ -36,6 +36,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "BTWLibrary": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:3977;http://localhost:52445",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
